desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
/* ... */
notebook GtkScale.trough {
	background-image: linear-gradient(to bottom,
					shade(@less_dark_color, 0.5),
					shade(@less_dark_color, 1.7));
	border-width: 0px;
}

notebook GtkScale.trough.vertical {
	background-image: linear-gradient(to right,
	                                  shade(@less_dark_color, 0.5),
	                                  shade(@less_dark_color, 1.7));
}

notebook GtkScale.trough:disabled {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 0.85),
	                                  shade(@less_dark_color, 1.4));
}

notebook GtkScale.trough.vertical:disabled {
	background-image: linear-gradient(to right,
	                                  shade(@less_dark_color, 0.85),
	                                  shade(@less_dark_color, 1.4));
}

notebook progressbar.trough {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 0.4),
	                                  @less_dark_color 50%,
	                                  shade(@less_dark_color, 1.8));
}

notebook progressbar.trough.vertical {
	background-image: linear-gradient(to right,
	                                  shade(@less_dark_color, 0.4),
	                                  @less_dark_color 50%,
	                                  shade(@less_dark_color, 1.8));
}

notebook .pane-separator {
	color: shade(@theme_selected_bg_color, 2.0);
	background-repeat: no-repeat;
	background-position: center;
	background-image: url("assets/notebook-pane-separator-grip.svg");
}

notebook .pane-separator:hover,
notebook .pane-separator:selected {
	background-image: url("assets/notebook-pane-separator-grip-hover.svg");
}

notebook .pane-separator.vertical {
	background-image: url("assets/notebook-pane-separator-grip-vertical.svg");
}

notebook .pane-separator.vertical:hover,
notebook .pane-separator.vertical:selected {
	background-image: url("assets/notebook-pane-separator-grip-vertical-hover.svg");
}

notebook .sidebar.separator,
notebook .sidebar.separator:hover {
	color: alpha(@light_frame_color, 0.6);
}

notebook .frame {
	border-color: alpha(@light_frame_color, 0.6);
}

/***************
 * treeview *
 ***************/
treeview {
	background-color: @less_dark_color;
	-treeview-vertical-separator: 0;
}

treeview.view,
treeview.view:disabled {
	background-color: @less_dark_color;
	color: @theme_fg_color;
}

treeview .view {
	color: @theme_fg_color;
}

/* row as a separator */
treeview.view.separator,
treeview.view.separator:hover {
	color: alpha(@light_frame_color, 0.6);
}

treeview:hover,
notebook container treeview:hover {
	background-color: alpha(@theme_selected_bg_color, 0.4);
}
treeview:active,
treeview:selected,
treeview:selected:focus {
    background-image: linear-gradient(to bottom,
	                                  shade(@theme_selected_bg_color,0.6 ),
	                                  shade(@theme_selected_bg_color, 1.5));
}

/* Rows are no longer recognized in gtk3.20!
treeview row:nth-child(odd),
treeview row:nth-child(odd):hover {
	background-color: @less_dark_color;
}

treeview row:nth-child(even),
treeview row:nth-child(even):hover {
	background-color: shade(@less_dark_color, 1.05);
}
*/

treeview:disabled{
	color: @insensitive_fg_color;
}

column-header {
	padding: 1px 2px;
}

column-header  button,
treeview  button {
	border-image: none;
	border-width: 0px 0px 1px 1px;
	border-radius: 0;
	border-style: solid;
	border-color: @less_dark_color;
}

column-header  button {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 1.3),
	                                  shade(@less_dark_color, 0.4));
}

treeview  button {
	background-image: linear-gradient(to bottom,
	                                  shade(@less_dark_color, 1.3),
	                                  shade(@less_dark_color, 0.4));
}

column-header  button:hover,
treeview  button:hover {
	border-image: none;
	border-width: 0px 0px 1px 1px;
	border-radius: 0;
	border-style: solid;
	border-color: @less_dark_color;
	background-image: linear-gradient(to bottom,
	                                  shade(@button_gradient_color_a, 1.5),
	                                  shade(@button_gradient_color_a, 0.7) 39%,
	                                  @theme_bg_color 40%,
	                                  shade(@less_dark_color, 0.4));
}

row {
	border-width: 0px;
}

 list-row {
    transition: all 400ms ease-out;
}

 list-row.activatable {
    background-image: none;
    border-image: none;
    border-color: transparent
}

 list-row.activatable:selected,
 list-row.activatable:selected:hover {
    background-color: transparent;
    background-image: linear-gradient(to bottom,
                                      @button_gradient_color_a,
                                      @button_gradient_color_b);
}

 list-row.activatable:hover {
    background-color: transparent;
    background-image: linear-gradient(to bottom,
	                                  @button_hover_gradient_color_a,
	                                  @button_hover_gradient_color_b);
}

.cell {
	padding: 2px;
	border-width: 0px;
}

/************
 * GtkScale *
 ************/
 scale {
	-GtkScale-slider-length: 16;
	-GtkRange-slider-width: 20;
	-GtkRange-trough-border: 0;
}

 scale slider,
 scale slider:hover {
	border-width: 0px;
	border-radius: 0px;
	border-style: none;
	color: transparent;
	background-color: transparent;
	background-repeat: no-repeat;
	background-position: center;
}

scale slider:disabled {
	color: transparent;
	background-color: transparent;
}

scale slider.fine-tune:active,
scale slider.fine-tune:active:hover,
scale slider.fine-tune.horizontal:active,
scale slider.fine-tune.horizontal:active:hover {
	background-size: 80%;
	background-repeat: no-repeat;
	background-position: center;
}
/* ... */

